--- a/signup.html
+++ b/signup.html
@@ -45,21 +45,21 @@
     <!-- Custom styles for this template -->
     <link href="css/styles.css" rel="stylesheet">
   </head>
-  <body class="text-center">
-    <form class="form-signin">
-  <img class="mb-4" src="images/good-vibes.jpg" alt="" width="200" height="250">
-  <h1 class="h3 mb-3 font-weight-normal">Sign Up to My Newsletter!</h1>
+    <body class="text-center">
+        <form class="form-signin" action="/" method="POST">
+            <img class="mb-4" src="images/good-vibes.jpg" alt="" width="200" height="250">
+            <h1 class="h3 mb-3 font-weight-normal">Sign Up to My Newsletter!</h1>
 
-  <label for="inputFirstName" class="sr-only">First Name</label>
-  <input type="text" class="form-control top" placeholder="First Name" required autofocus>
+            <label for="inputFirstName" class="sr-only">First Name</label>
+            <input id="inputFirstName" type="text" name="firstName" class="form-control top" placeholder="First Name" required autofocus>
 
-  <label for="inputLastName" class="sr-only">Last Name</label>
-  <input type="text" class="form-control middle" placeholder="Last Name" required>
+            <label for="inputLastName" class="sr-only">Last Name</label>
+            <input id="inputLastName" type="text" name="secondName" class="form-control middle" placeholder="Last Name" required>
 
-  <label for="inputEmail" class="sr-only">Email address</label>
-  <input type="email" class="form-control bottom" placeholder="Email address" required>
-  <button class="btn btn-lg btn-primary mt-4 btn-block" type="submit">Sign up!</button>
-  <p class="mt-5 mb-3 text-muted">&copy; Hanssen Ramanjooloo 2020</p>
-</form>
-</body>
+            <label for="inputEmail" class="sr-only">Email address</label>
+            <input id="inputEmail" type="text" name="email" class="form-control bottom" placeholder="Email address" required>
+            <button class="btn btn-lg btn-primary mt-4 btn-block" type="submit">Sign up!</button>
+            <p class="mt-5 mb-3 text-muted">&copy; Hanssen Ramanjooloo 2020</p>
+        </form>
+    </body>
 </html>
