--- a/signup.html
+++ b/signup.html
@@ -54,7 +54,7 @@
             <input id="inputFirstName" type="text" name="firstName" class="form-control top" placeholder="First Name" required autofocus>
 
             <label for="inputLastName" class="sr-only">Last Name</label>
-            <input id="inputLastName" type="text" name="secondName" class="form-control middle" placeholder="Last Name" required>
+            <input id="inputLastName" type="text" name="lastName" class="form-control middle" placeholder="Last Name" required>
 
             <label for="inputEmail" class="sr-only">Email address</label>
             <input id="inputEmail" type="text" name="email" class="form-control bottom" placeholder="Email address" required>
